# kira

./: .gitattributes  .gitignore  AGENTS.md  Claude.md  LICENSE  Missing-Kira-Syntax-Audit.md  Package.swift  README.md  REFACTORING_PROGRESS.md  build.zig  debug.bash  dump_fn.zig  dump_ids.zig  dump_kbc.zig  dump_manifest.py  dump_manifest.zig  libffi-metadata.toml  llvm-metadata.toml  opencode.json
toolchain/: Cargo.toml
toolchain/.cargo/: config.toml  config.toml.example
toolchain/src/: lib.rs  main.rs
toolchain/src/aot/: archive.rs  bridge.rs  build.rs  build_executable.rs  build_library.rs  c_header.rs  codegen.rs  dylib.rs  error.rs  lib_codegen.rs  mod.rs  runner.rs  stack.rs  types.rs  utils.rs  wrappers.rs
toolchain/src/ast/: attributes.rs  expressions.rs  identifiers.rs  items.rs  literals.rs  mod.rs  statements.rs
toolchain/src/cli/: mod.rs  utils.rs
toolchain/src/compiler/: aot.rs  artifacts.rs  attributes.rs  build_artifacts.rs  builtins.rs  calls.rs  eligibility.rs  functions.rs  lowering.rs  metadata.rs  mod.rs  native_build.rs  platforms.rs  serialization.rs  signatures.rs  tests.rs  types.rs
toolchain/src/parser/: attributes.rs  common.rs  error.rs  expressions.rs  identifiers.rs  infrastructure.rs  items.rs  literals.rs  metadata.rs  mod.rs  platforms.rs  statements.rs  tests.rs
toolchain/src/project/: error.rs  library.rs  loader.rs  manifest.rs  mod.rs  resolver.rs  tests.rs
toolchain/src/runtime/: ffi_loader.rs  mod.rs  native_support.rs  (+2 more)
toolchain/tests/: compiler.rs  extern_bindings.rs  ffi.rs  parser.rs  project.rs  vm.rs
(+1306 files in other folders)
