[package]
name = "toolchain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kira"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
chumsky = "0.12.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
flate2 = "1.0"
inkwell = { version = "0.4", features = ["llvm17-0"] }
libloading = "0.8"
ordered-float = { version = "5.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
